--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html lang="pt-br">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Leonardo Gabriel Simões - Desenvolvedor Backend</title>
-  <meta name="description" content="Desenvolvedor Backend, com foco em APIs, bancos de dados e lógica de programação.">
-  <link rel="stylesheet" href="./css/style.min.css">
+  <meta name="description" content="Desenvolvedor Backend, com foco em APIs, bancos de dados e lógica de programação." />
+  <link rel="stylesheet" href="./css/style.min.css" />
+  <link rel="icon" href="favicon.ico" type="image/svg+xml" />
 </head>
 
 <body>
   <header class="header">
-
     <nav>
       <ul class="header-menu">
         <li><a href="#experiencia">Experiência</a></li>
@@ -22,9 +22,10 @@
   </header>
 
   <main class="introducao">
-    <img src="./img/leonardo.jpg" alt="Leonardo Gabriel Simões" width="360" height="520">
+    <!-- Caminho relativo para imagem -->
+    <img src="./img/leonardo.jpg" alt="Leonardo Gabriel Simões" width="360" height="520" />
     <div>
-      <h1>Desenvolvedor<br>Backend</h1>
+      <h1>Desenvolvedor<br />Backend</h1>
       <p>Localizado em Osasco - SP 🧠</p>
     </div>
   </main>
@@ -32,13 +33,17 @@
   <section class="experiencia" id="experiencia" aria-label="Experiência">
     <h2 class="subtitulo">Experiência</h2>
     <div>
-      <p class="experiencia-texto">Desenvolvo projetos focados em <strong>APIs REST</strong>, <strong>Node.js</strong>, <strong>Express</strong> e <strong>bancos de dados</strong> como MongoDB e MySQL. Gosto de criar soluções com boa lógica e segurança.</p>
+      <p class="experiencia-texto">
+        Desenvolvo projetos focados em <strong>APIs REST</strong>, <strong>Node.js</strong>, <strong>Express</strong> e <strong>bancos de dados</strong> como MongoDB e MySQL. Gosto de criar soluções com boa lógica e segurança.
+      </p>
 
       <div class="empresa">
         <span class="empresa-ano">2025</span>
         <h3 class="empresa-titulo">Task API</h3>
         <span class="empresa-titulo">Desenvolvedor Backend</span>
-        <p class="empresa-texto">Desenvolvimento de uma API RESTful completa para gerenciamento de tarefas, com autenticação via JWT e integração com MongoDB.</p>
+        <p class="empresa-texto">
+          Desenvolvimento de uma API RESTful completa para gerenciamento de tarefas, com autenticação via JWT e integração com MongoDB.
+        </p>
         <ul class="empresa-habilidades">
           <li>Node.js</li>
           <li>Express</li>
@@ -51,7 +56,9 @@
         <span class="empresa-ano">2024</span>
         <h3 class="empresa-titulo">Sistema de Login</h3>
         <span class="empresa-titulo">Projeto Pessoal</span>
-        <p class="empresa-texto">Criação de um sistema de autenticação com sessões, criptografia de senha com bcrypt e banco de dados MySQL.</p>
+        <p class="empresa-texto">
+          Criação de um sistema de autenticação com sessões, criptografia de senha com bcrypt e banco de dados MySQL.
+        </p>
         <ul class="empresa-habilidades">
           <li>Node.js</li>
           <li>MySQL</li>
@@ -64,14 +71,15 @@
         <span class="empresa-ano">2024</span>
         <h3 class="empresa-titulo">API de Produtos</h3>
         <span class="empresa-titulo">Freelancer</span>
-        <p class="empresa-texto">API simples com rotas para cadastrar, listar e deletar produtos com validação de dados.</p>
+        <p class="empresa-texto">
+          API simples com rotas para cadastrar, listar e deletar produtos com validação de dados.
+        </p>
         <ul class="empresa-habilidades">
           <li>JavaScript</li>
           <li>Express</li>
           <li>Postman</li>
         </ul>
       </div>
-
     </div>
   </section>
 
@@ -88,7 +96,7 @@
           <li class="faculdade">
             <span class="faculdade-tipo">Ensino Médio</span>
             <h3 class="faculdade-curso">Cursando</h3>
-            <span class="faculdade-instituicao">Colégio Adventista vila yara</span>
+            <span class="faculdade-instituicao">Colégio Adventista Vila Yara</span>
           </li>
         </ul>
 
@@ -119,12 +127,11 @@
       <ul class="footer-contato">
         <li>leonardo.simoes@gmail.com</li>
         <li>(11) 97796-0188</li>
-        <li><a href="https://github.com/leobiel1709">@github</a></li>
+        <li><a href="https://github.com/leobiel1709" target="_blank" rel="noopener noreferrer">@github</a></li>
       </ul>
       <p class="footer-copy">Leonardo Gabriel Simões.</p>
     </div>
   </footer>
-
 </body>
 
 </html>
